[gd_scene load_steps=13 format=3 uid="uid://bi1o7l72835yc"]

[ext_resource type="Script" path="res://tutorial.gd" id="1_twblh"]
[ext_resource type="Texture2D" uid="uid://c2b1gwk0smxw2" path="res://game_background.png" id="1_vh60a"]
[ext_resource type="Texture2D" uid="uid://i6nl80ebvvt3" path="res://background2.jpeg" id="2_v3nej"]
[ext_resource type="Texture2D" uid="uid://d4a81i40bh51g" path="res://tetrisBackground.png" id="3_y3agf"]
[ext_resource type="PackedScene" uid="uid://bqyqwvfkcnlkd" path="res://shadow_piece.tscn" id="4_44hqt"]
[ext_resource type="Texture2D" uid="uid://vs566gkdawws" path="res://white_background.png" id="4_by5q7"]
[ext_resource type="AudioStream" uid="uid://djo4rs766vks7" path="res://tetrisTheme.mp3" id="5_f6lm0"]
[ext_resource type="AudioStream" uid="uid://bdix5s7f5q6lb" path="res://Sound Effects/tetris-gb-18-move-piece.mp3" id="6_nuntq"]
[ext_resource type="Texture2D" uid="uid://b3ru3hlxd5woj" path="res://settingsButton.png" id="7_kh8nd"]
[ext_resource type="Texture2D" uid="uid://d2b4a2gpe2m15" path="res://settingsBackground.jpg" id="8_vetlt"]
[ext_resource type="PackedScene" uid="uid://cg1lllddle8yb" path="res://Settings.tscn" id="9_s2xa5"]
[ext_resource type="PackedScene" uid="uid://c1g1jsvcw8j73" path="res://tutorial_instructions.tscn" id="11_yqa4q"]

[node name="Tutorial" type="Node2D"]
process_mode = 1
position = Vector2(40, 728)
script = ExtResource("1_twblh")
metadata/_edit_horizontal_guides_ = [-73.0]
metadata/_edit_vertical_guides_ = [41.0]

[node name="GameBackground" type="Sprite2D" parent="."]
position = Vector2(-6, 4)
scale = Vector2(0.213, 0.213)
texture = ExtResource("1_vh60a")

[node name="GameBackground2" type="Sprite2D" parent="."]
modulate = Color(1, 0.686275, 0.196078, 0.223529)
position = Vector2(-3.74999, 2.24999)
scale = Vector2(0.549, 0.415567)
texture = ExtResource("2_v3nej")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4.3, 4.3)

[node name="Hold" type="Label" parent="."]
texture_filter = 1
offset_left = -96.0
offset_top = -66.0
offset_right = 40.0
offset_bottom = 20.0
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 60
text = "Hold"

[node name="Score" type="Label" parent="."]
texture_filter = 1
offset_left = -195.0
offset_top = -85.0
offset_right = -155.0
offset_bottom = -59.0
text = "Score:
0"

[node name="Next" type="Label" parent="."]
texture_filter = 1
offset_left = 56.0
offset_top = -69.0
offset_right = 195.0
offset_bottom = 17.0
scale = Vector2(0.275, 0.275)
theme_override_font_sizes/font_size = 60
text = "Next"

[node name="WhiteBackground" type="Sprite2D" parent="."]
modulate = Color(0.890196, 0.819608, 0.207843, 0.647059)
rotation = 3.14159
scale = Vector2(0.048, 0.125)
texture = ExtResource("4_by5q7")

[node name="TetrisBackground" type="Sprite2D" parent="."]
position = Vector2(0, 8.0695)
scale = Vector2(0.506848, 0.502707)
texture = ExtResource("3_y3agf")

[node name="ShadowPiece" parent="." instance=ExtResource("4_44hqt")]
position = Vector2(-40, -72)

[node name="Background" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_f6lm0")
autoplay = true

[node name="Effects" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nuntq")

[node name="PieceEffects" type="AudioStreamPlayer" parent="."]
volume_db = 5.622
max_polyphony = 3

[node name="SettingsButton" type="Area2D" parent="."]
position = Vector2(111.162, -56.5028)
rotation = -3.14159
scale = Vector2(0.03, 0.03)

[node name="SettingsSymbol" type="Sprite2D" parent="SettingsButton"]
position = Vector2(-27.9219, -16.7617)
rotation = 3.14159
scale = Vector2(0.605913, 0.605913)
texture = ExtResource("7_kh8nd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SettingsButton"]
polygon = PackedVector2Array(-61.2554, 149.906, -61.2554, 83.2391, -94.5884, 83.2391, -127.922, 83.2391, -194.588, 16.5725, -161.255, 16.5725, -161.255, -16.7609, -161.255, -50.0942, -127.922, -116.761, -94.5884, -116.761, -61.2554, -183.428, 5.41162, -183.428, 5.41162, -116.761, 38.7446, -116.761, 105.412, -116.761, 138.745, -50.0942, 72.0781, -16.7609, 105.412, 16.5725, 105.412, 116.572, 38.7446, 83.2391, 5.41162, 116.572, 5.41162, 149.906)

[node name="SettingsBackground" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.996078, 0.396078, 0.407843, 0)
position = Vector2(-5, 1)
texture = ExtResource("8_vetlt")

[node name="TutorialInstructions" parent="." instance=ExtResource("11_yqa4q")]
offset_left = -112.0
offset_top = -1.0
offset_right = -112.0
offset_bottom = -1.0
scale = Vector2(0.485, 0.485)

[node name="Settings" parent="." instance=ExtResource("9_s2xa5")]
process_mode = 3
visible = false
offset_left = -26.0
offset_top = -56.0
offset_right = 822.0
offset_bottom = -55.787
scale = Vector2(0.58, 0.58)

[connection signal="input_event" from="SettingsButton" to="." method="_on_settings_button_input_event" flags=18]
